--- a/composer.json
+++ b/composer.json
@@ -46,5 +46,8 @@
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
         }
+    },
+    "conflict": {
+        "nikic/php-parser": "4.6.0"
     }
 }
