--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": "^7.2.5",
         "serendipity_hq/console-styles-bundle": "dev-dev",
-        "symfony/console": "5.0.*",
+        "symfony/console": "^3.0|4.0|^5.0",
         "thecodingmachine/safe": "^1.0"
     },
     "require-dev": {
@@ -19,9 +19,9 @@
         "phpstan/phpstan-symfony": "^0.12.2",
         "rector/rector": "0.7.1",
         "roave/security-advisories": "dev-master",
-        "symfony/debug-pack": "1.0.7",
+        "symfony/debug-pack": "^1.0",
         "symfony/maker-bundle": "^1.0",
-        "symfony/test-pack": "1.0.6",
+        "symfony/test-pack": "^1.0",
         "vimeo/psalm": "^3.8",
         "weirdan/doctrine-psalm-plugin": "^0.9"
     },
