--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": "^7.2.5",
         "serendipity_hq/console-styles-bundle": "dev-dev",
         "symfony/console": "^3.0|4.0|^5.0",
-        "thecodingmachine/safe": "^1.0"
+        "thecodingmachine/safe": "^0.1|^1.0"
     },
     "require-dev": {
         "drenso/phan-extensions": "^2.5",
@@ -22,6 +22,7 @@
         "symfony/debug-pack": "^1.0",
         "symfony/maker-bundle": "^1.0",
         "symfony/test-pack": "^1.0",
+        "thecodingmachine/phpstan-safe-rule": "@stable",
         "vimeo/psalm": "^3.8",
         "weirdan/doctrine-psalm-plugin": "^0.9"
     },
