Install `phpstan/phpstan` and its extensions.

--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
         "drenso/phan-extensions": "@stable",
         "friendsofphp/php-cs-fixer": "^2.16",
         "phan/phan": "^3.0",
-        "phpstan/phpstan": "^0.12.9",
-        "phpstan/phpstan-doctrine": "^0.12.8",
-        "phpstan/phpstan-phpunit": "^0.12.5",
-        "phpstan/phpstan-symfony": "^0.12.2",
+        "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan-doctrine": "@stable",
+        "phpstan/phpstan-phpunit": "@stable",
+        "phpstan/phpstan-symfony": "@stable",
         "rector/rector": "^0.7",
         "roave/security-advisories": "dev-master",
         "symfony/debug-pack": "^1.0",
