--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "symfony-bundle",
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.2",
         "serendipity_hq/console-styles-bundle": "dev-dev",
         "symfony/console": "^3.0|4.0|^5.0",
         "thecodingmachine/safe": "^0.1|^1.0"
@@ -21,15 +21,13 @@
         "roave/security-advisories": "dev-master",
         "symfony/debug-pack": "^1.0",
         "symfony/maker-bundle": "^1.0",
+        "symfony/phpunit-bridge": "^5.1",
         "symfony/test-pack": "^1.0",
         "thecodingmachine/phpstan-safe-rule": "@stable",
         "vimeo/psalm": "^3.12",
         "weirdan/doctrine-psalm-plugin": "@stable"
     },
     "config": {
-        "preferred-install": {
-            "*": "dist"
-        },
         "sort-packages": true
     },
     "autoload": {
@@ -40,12 +38,6 @@
     "autoload-dev": {
         "psr-4": {
             "SerendipityHQ\\Bundle\\UsersBundle\\Tests\\": "tests"
-        }
-    },
-    "scripts": {
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
         }
     },
     "conflict": {
