--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -29,13 +29,11 @@ jobs:
 
             - name: Run PHPunit
               run: |
-                  ./vendor/bin/phpunit --verbose --debug
-              env:
-                  SYMFONY_DEPRECATIONS_HELPER: weak_vendors
+                  ./vendor/bin/phpunit
 
             - name: Change paths in clover.xml
               run: |
-                  sed -i 's+/home/runner/work/PHPValueObjects/PHPValueObjects+/github/workspace+g' ./build/logs/clover.xml
+                  sed -i 's+/home/runner/work/bundle-users/bundle-users+/github/workspace+g' ./build/coverage/clover.xml
 
             - name: Sonarcloud
               uses: sonarsource/sonarcloud-github-action@master
