--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,40 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<!-- https://phpunit.readthedocs.io/en/latest/configuration.html -->
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="bin/.phpunit/phpunit.xsd"
-         backupGlobals="false"
-         colors="true"
-         bootstrap="tests/bootstrap.php"
->
+<phpunit colors="true" bootstrap="vendor/autoload.php">
     <php>
-        <ini name="error_reporting" value="-1" />
-        <server name="APP_ENV" value="test" force="true" />
-        <server name="SHELL_VERBOSITY" value="-1" />
-        <server name="SYMFONY_PHPUNIT_REMOVE" value="" />
-        <server name="SYMFONY_PHPUNIT_VERSION" value="7.5" />
-
-        <!-- ###+ symfony/framework-bundle ### -->
-        <env name="APP_ENV" value="dev"/>
-        <env name="APP_SECRET" value="77f5ffe007aa3431db185cbe047228b6"/>
-        <!-- env name="TRUSTED_PROXIES" value="127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16" -->
-        <!-- env name="TRUSTED_HOSTS" value="'^(localhost|example\.com)$'" -->
-        <!-- ###- symfony/framework-bundle ### -->
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="max[self]=0"/>
+        <!-- Disable E_USER_DEPRECATED until 3.0 -->
+        <!-- php -r 'echo -1 & ~E_USER_DEPRECATED;' -->
+        <ini name="error_reporting" value="-16385"/>
     </php>
-
     <testsuites>
-        <testsuite name="Project Test Suite">
+        <testsuite name="SHQUsersBundle for the Symfony Framework">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
-
     <filter>
-        <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory suffix=".php">src</directory>
+        <whitelist addUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">src/</directory>
+            <exclude>
+                <directory>./src/Resources</directory>
+            </exclude>
         </whitelist>
     </filter>
-
-    <listeners>
-        <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
-    </listeners>
+    <logging>
+        <log type="coverage-html" target="./build/coverage/html" lowUpperBound="35" highLowerBound="70" />
+        <log type="coverage-clover" target="build/coverage/clover.xml"/>
+    </logging>
 </phpunit>
