--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "require": {
         "php": "^7.2",
         "serendipity_hq/console-styles-bundle": "dev-dev",
-        "symfony/console": "^3.0|4.0|^5.0",
-        "thecodingmachine/safe": "^0.1|^1.0"
+        "symfony/console": "^3.4|4.4|^5.2",
+        "thecodingmachine/safe": "^1.0"
     },
     "require-dev": {
         "drenso/phan-extensions": "@stable",
