--- a/composer.json
+++ b/composer.json
@@ -10,22 +10,11 @@
         "thecodingmachine/safe": "^1.0"
     },
     "require-dev": {
-        "drenso/phan-extensions": "@stable",
-        "friendsofphp/php-cs-fixer": "^2.16",
-        "phan/phan": "^3.0",
-        "phpstan/phpstan": "^0.12",
-        "phpstan/phpstan-doctrine": "@stable",
-        "phpstan/phpstan-phpunit": "@stable",
-        "phpstan/phpstan-symfony": "@stable",
-        "rector/rector": "^0.7",
+        "bamarni/composer-bin-plugin": "^1.4",
         "roave/security-advisories": "dev-master",
         "symfony/debug-pack": "^1.0",
         "symfony/maker-bundle": "^1.0",
-        "symfony/phpunit-bridge": "^5.1",
-        "symfony/test-pack": "^1.0",
-        "thecodingmachine/phpstan-safe-rule": "@stable",
-        "vimeo/psalm": "^3.12",
-        "weirdan/doctrine-psalm-plugin": "@stable"
+        "symfony/test-pack": "^1.0"
     },
     "config": {
         "sort-packages": true
@@ -39,6 +28,11 @@
         "psr-4": {
             "SerendipityHQ\\Bundle\\UsersBundle\\Tests\\": "tests"
         }
+    },
+    "scripts": {
+        "bin": "echo 'bin not installed'",
+        "post-install-cmd": ["@composer bin all install --ansi"],
+        "post-update-cmd": ["@composer bin all update --ansi"]
     },
     "conflict": {
         "nikic/php-parser": "4.6.0"
