--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -29,7 +29,7 @@ jobs:
 
             - name: Run PHPunit
               run: |
-                  ./vendor/bin/phpunit
+                  ./vendor/bin/simple-phpunit
 
             - name: Change paths in clover.xml
               run: |
