--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,22 @@
     "require": {
         "php": "^7.2",
         "serendipity_hq/console-styles-bundle": "dev-dev",
-        "symfony/console": "^3.4|4.4|^5.2",
+        "symfony/console": "^3.0|4.0|^5.0",
         "thecodingmachine/safe": "^1.0"
     },
     "require-dev": {
         "bamarni/composer-bin-plugin": "^1.4",
         "roave/security-advisories": "dev-master",
-        "symfony/debug-pack": "^1.0",
+        "symfony/browser-kit": "^3.0|4.0|^5.0",
+        "symfony/css-selector": "^3.0|4.0|^5.0",
+        "symfony/debug-bundle": "^3.0|4.0|^5.0",
         "symfony/maker-bundle": "^1.0",
-        "symfony/test-pack": "^1.0"
+        "symfony/monolog-bundle": "^3.0|4.0|^5.0",
+        "symfony/phpunit-bridge": "^3.0|4.0|^5.0",
+        "symfony/stopwatch": "^3.0|4.0|^5.0",
+        "symfony/twig-bundle": "^3.0|4.0|^5.0",
+        "symfony/var-dumper": "^3.0|4.0|^5.0",
+        "symfony/web-profiler-bundle": "^3.0|4.0|^5.0"
     },
     "config": {
         "sort-packages": true
