--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-phpunit.xml
+.php_cs
+.phpunit.result.cache
 composer.lock
+phpunit.xml
+build
+vendor
 var
 !var/cache/.gitkeep
-vendor
-/vendor-bin/**/vendor
