--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,21 +1,18 @@
 <?php
 
 $finder = PhpCsFixer\Finder::create()
-    ->exclude([
-        'build',
-        'docs',
-        'vendor'
-    ])
-    ->in(__DIR__.'/src')
-    ->in(__DIR__.'/tests');;
+    ->in([
+        __DIR__.'/src',
+        __DIR__.'/tests'
+    ]);
 
 $header = <<<EOF
-This file is part of SHQUsersBundle.
+This file is part of the Serendipity HQ Users Bundle.
 
-(c) Adamo Aerendir Crespi <aerendir@serendipityhq.com>.
+Copyright (c) Adamo Aerendir Crespi <aerendir@serendipityhq.com>.
 
-For the full copyright and license information, please view
-the LICENSE file that was distributed with this source code.
+For the full copyright and license information, please view the LICENSE
+file that was distributed with this source code.
 EOF;
 
 return PhpCsFixer\Config::create()
