--- a/composer.json
+++ b/composer.json
@@ -18,21 +18,21 @@
     "require": {
         "php": "^7.2",
         "serendipity_hq/component-console-styles": "dev-dev",
-        "symfony/console": "^3.0|4.0|^5.0",
+        "symfony/console": "^3.4|^4.4|^5.1",
         "thecodingmachine/safe": "^1.0"
     },
     "require-dev": {
         "bamarni/composer-bin-plugin": "^1.4",
         "roave/security-advisories": "dev-master",
-        "symfony/browser-kit": "^3.0|4.0|^5.0",
-        "symfony/css-selector": "^3.0|4.0|^5.0",
-        "symfony/debug-bundle": "^3.0|4.0|^5.0",
-        "symfony/monolog-bundle": "^3.0|4.0|^5.0",
-        "symfony/phpunit-bridge": "^3.0|4.0|^5.0",
-        "symfony/stopwatch": "^3.0|4.0|^5.0",
-        "symfony/twig-bundle": "^3.0|4.0|^5.0",
-        "symfony/var-dumper": "^3.0|4.0|^5.0",
-        "symfony/web-profiler-bundle": "^3.0|4.0|^5.0"
+        "symfony/browser-kit": "^3.4|^4.4|^5.1",
+        "symfony/css-selector": "^3.4|^4.4|^5.1",
+        "symfony/debug-bundle": "^3.4|^4.4|^5.1",
+        "symfony/monolog-bundle": "^3.4|^4.4|^5.1",
+        "symfony/phpunit-bridge": "^3.4|^4.4|^5.1",
+        "symfony/stopwatch": "^3.4|^4.4|^5.1",
+        "symfony/twig-bundle": "^3.4|^4.4|^5.1",
+        "symfony/var-dumper": "^3.4|^4.4|^5.1",
+        "symfony/web-profiler-bundle": "^3.4|^4.4|^5.1"
     },
     "config": {
         "sort-packages": true
