Tewak configuration of Rector.

--- a/rector.yaml
+++ b/rector.yaml
@@ -1,9 +1,36 @@
 parameters:
     php_version_features: '7.2'
+    paths:
+        - 'src'
+        - 'tests'
     autoload_paths:
         - 'vendor-bin/phpunit/vendor/autoload.php'
     sets:
-        # PHP sets
+        # architecture
+        - 'action-injection-to-constructor-injection'
+        - 'array-str-functions-to-static-call'
+        - 'constructor-injectin-to-action-injection'
+        - 'code-quality'
+        - 'coding-style'
+        - 'dead-classes'
+        - 'dead-code'
+        - 'early-return'
+        - 'monolog20'
+        - 'php-di-decouple'
+        - 'swiftmailer60'
+        # Doctrine
+        - 'doctrine'
+        - 'doctrine25'
+        - 'doctrine-code-quality'
+        - 'doctrine-gedmo-to-knplabs'
+        - 'doctrine-services'
+        - 'doctrine-dbal-210'
+        # Sensio
+        - 'framework-extra-bundle-30'
+        - 'framework-extra-bundle-50'
+        - 'guzzle'
+        - 'naming'
+        - 'performance'
         - 'php52'
         - 'php53'
         - 'php54'
@@ -11,9 +38,25 @@ parameters:
         - 'php70'
         - 'php71'
         - 'php72'
-        # Symfony
-        - 'symfony26'
-        - 'symfony28'
+        - 'phpstan'
+        # PHPUnit sets
+        - 'phpunit'
+        - 'phpunit50'
+        - 'phpunit60'
+        - 'phpunit70'
+        - 'phpunit75'
+        - 'phpunit80'
+        - 'phpunit80-dms'
+        - 'phpunit-code-quality'
+        - 'phpunit-exception'
+        - 'phpunit-injector'
+        - 'phpunit-mock'
+        - 'phpunit-specific-method'
+        - 'phpunit-yield-data-provider'
+        # polyfill
+        - 'unwrap-compat'
+        - 'privatization'
+        - 'solid'
         - 'symfony30'
         - 'symfony31'
         - 'symfony32'
@@ -29,6 +72,8 @@ parameters:
         - 'symfony-code-quality'
         - 'symfony-constructor-injection'
         - 'symfony-phpunit'
+        - 'safe07'
+        - 'type-declaration'
         # Twig
         - 'twig112'
         - 'twig127'
@@ -38,60 +83,25 @@ parameters:
         - 'twig240'
         - 'twig-underscore-to-namespace'
         - 'type-declaration'
-        # Doctrine
-        - 'doctrine'
-        - 'doctrine25'
-        - 'doctrine-code-quality'
-        - 'doctrine-gedmo-to-knplabs'
-        - 'doctrine-services'
-        - 'doctrine-dbal-210'
-        # PHPUnit sets
-        - 'phpunit'
-        - 'phpunit50'
-        - 'phpunit60'
-        - 'phpunit70'
-        - 'phpunit75'
-        - 'phpunit80'
-        - 'phpunit80-dms'
-        - 'phpunit-code-quality'
-        - 'phpunit-exception'
-        - 'phpunit-injector'
-        - 'phpunit-mock'
-        - 'phpunit-specific-method'
-        - 'phpunit-yield-data-provider'
-        # Sensio
-        - 'framework-extra-bundle-30'
-        - 'framework-extra-bundle-50'
-        # Other sets
-        - 'action-injection-to-constructor-injection'
-        - 'array-str-functions-to-static-call'
-        - 'code-quality'
-        - 'coding-style'
-        - 'constructor-injectin-to-action-injection'
-        - 'dead-classes'
-        - 'dead-code'
-        - 'doctrine'
-        - 'doctrine-code-quality'
-        - 'early-return'
-        - 'monolog20'
-        - 'php-di-decouple'
-        - 'safe07'
-        - 'solid'
-        - 'swiftmailer60'
-        - 'unwrap-compat'
-        - 'psr-4'
     import_short_classes: false
     exclude_rectors:
-        # I don't like those
-        - 'Rector\CodeQuality\Rector\Identical\SimplifyBoolIdenticalTrueRector'
+        - 'Rector\CodeQuality\Rector\Catch_\ThrowWithPreviousExceptionRector'
         - 'Rector\CodeQuality\Rector\Concat\JoinStringConcatRector'
-        - 'Rector\CodingStyle\Rector\Identical\IdenticalFalseToBooleanNotRector'
-        - 'Rector\SOLID\Rector\ClassMethod\UseInterfaceOverImplementationInConstructorRector'
-        - 'Rector\CodingStyle\Rector\ClassMethod\NewlineBeforeNewAssignSetRector'
-        - 'Rector\CodingStyle\Rector\Encapsed\EncapsedStringsToSprintfRector'
+        - 'Rector\CodeQuality\Rector\Identical\SimplifyBoolIdenticalTrueRector'
         - 'Rector\CodingStyle\Rector\Class_\AddArrayDefaultToArrayPropertyRector'
-        - 'Rector\PHPUnit\Rector\Class_\AddSeeTestAnnotationRector'
-        - 'Rector\SOLID\Rector\ClassConst\PrivatizeLocalClassConstantRector'
-        - 'Rector\SOLID\Rector\Class_\FinalizeClassesWithoutChildrenRector'
-        # Incompatible with bundles
+        - 'Rector\CodingStyle\Rector\ClassMethod\NewlineBeforeNewAssignSetRector'
+        - 'Rector\CodingStyle\Rector\ClassMethod\RemoveDoubleUnderscoreInMethodNameRector'
+        - 'Rector\CodingStyle\Rector\Encapsed\EncapsedStringsToSprintfRector'
+        - 'Rector\CodingStyle\Rector\Identical\IdenticalFalseToBooleanNotRector'
+        - 'Rector\CodingStyle\Rector\Switch_\BinarySwitchToIfElseRector'
+        - 'Rector\CodingStyle\Rector\Throw_\AnnotateThrowablesRector'
+        - 'Rector\CodingStyle\Rector\Use_\RemoveUnusedAliasRector'
         - 'Rector\DeadCode\Rector\Class_\RemoveUnusedClassesRector'
+        - 'Rector\Naming\Rector\Class_\RenamePropertyToMatchTypeRector'
+        - 'Rector\Php56\Rector\FunctionLike\AddDefaultValueForUndefinedVariableRector' # May be good one day
+        - 'Rector\Privatization\Rector\ClassMethod\PrivatizeLocalOnlyMethodRector'
+        - 'Rector\Privatization\Rector\MethodCall\PrivatizeLocalGetterToPropertyRector'
+        - 'Rector\SOLID\Rector\Property\AddFalseDefaultToBoolPropertyRector'
+        - 'Rector\SOLID\Rector\ClassMethod\UseInterfaceOverImplementationInConstructorRector'
+        - 'Rector\TypeDeclaration\Rector\ClassMethod\AddArrayParamDocTypeRector'
+        - 'Rector\TypeDeclaration\Rector\ClassMethod\AddArrayReturnDocTypeRector'
