--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "thecodingmachine/safe": "^1.0"
     },
     "require-dev": {
+        "ext-ast": "*",
         "bamarni/composer-bin-plugin": "^1.4",
         "roave/security-advisories": "dev-master",
         "symfony/browser-kit": "^3.4|^4.4|^5.1",
