--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -32,7 +32,7 @@ jobs:
 
             - name: Change paths in clover.xml
               run: |
-                  sed -i 's+/home/runner/work/bundle-users/bundle-users+/github/workspace+g' ./build/coverage/clover.xml
+                  sed -i 's+/home/runner/work/bundle-users/bundle-users+/github/workspace+g' ./var/coverage/clover.xml
 
             - name: Sonarcloud
               uses: sonarsource/sonarcloud-github-action@master
