--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "serendipity_hq/component-console-styles": "dev-dev",
         "symfony/console": "^3.4|^4.4|^5.1",
         "symfony/property-access": "^3.4|^4.4|^5.1",
+        "symfony/validator": "^3.4|^4.4|^5.1",
         "thecodingmachine/safe": "^1.0"
     },
     "require-dev": {
