--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -11,7 +11,7 @@ jobs:
                 os: [ubuntu-latest]
                 php: ['7.3', '7.4']
                 composer-flags: ['--prefer-stable --prefer-lowest', '']
-                symfony: ['~4.4', '~5.1']
+                symfony: ['~5.1']
         name: PHP ${{ matrix.php }} SF ${{ matrix.symfony }} (${{ matrix.composer-flags }}) on ${{ matrix.os }}
         steps:
             - name: Checkout
