--- a/composer.json
+++ b/composer.json
@@ -18,25 +18,25 @@
     "require": {
         "php": "^7.3",
         "serendipity_hq/component-console-styles": "dev-dev",
-        "symfony/console": "^4.4|^5.1",
-        "symfony/property-access": "^4.4|^5.1",
-        "symfony/validator": "^4.4|^5.1",
+        "symfony/console": "^5.1",
+        "symfony/property-access": "5.1",
+        "symfony/validator": "^5.1",
         "thecodingmachine/safe": "^1.0"
     },
     "require-dev": {
         "ext-ast": "*",
         "bamarni/composer-bin-plugin": "^1.4",
         "roave/security-advisories": "dev-master",
-        "symfony/browser-kit": "^4.4|^5.1",
-        "symfony/css-selector": "^4.4|^5.1",
-        "symfony/debug-bundle": "^4.4|^5.1",
+        "symfony/browser-kit": "^5.1",
+        "symfony/css-selector": "^5.1",
+        "symfony/debug-bundle": "^5.1",
         "symfony/monolog-bundle": "^2|^3",
-        "symfony/phpunit-bridge": "^4.4|^5.1",
-        "symfony/security": "^4.4|^5.1",
-        "symfony/stopwatch": "^4.4|^5.1",
-        "symfony/twig-bundle": "^4.4|^5.1",
-        "symfony/var-dumper": "^4.4|^5.1",
-        "symfony/web-profiler-bundle": "^4.4|^5.1"
+        "symfony/phpunit-bridge": "^5.1",
+        "symfony/security": "^5.1",
+        "symfony/stopwatch": "^5.1",
+        "symfony/twig-bundle": "^5.1",
+        "symfony/var-dumper": "^5.1",
+        "symfony/web-profiler-bundle": "^5.1"
     },
     "config": {
         "sort-packages": true
