--- a/.github/workflows/composer.yml
+++ b/.github/workflows/composer.yml
@@ -21,6 +21,7 @@ jobs:
                   php-version: ${{ matrix.php }}
                   coverage: none # disable xdebug, pcov
                   tools: prestissimo, symfony
+                  extensions: ast
 
             - name: Install Composer deps
               run: |
