--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -1,5 +1,8 @@
 services:
+    # default configuration for services in *this* file
+    _defaults:
+        autowire: true      # Automatically injects dependencies in your services.
+        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        public: false
     SerendipityHQ\Bundle\UsersBundle\Command\UsersCreateCommand:
         tags: ['console.command']
-        public: false
-        autowire: true
