--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -9,7 +9,7 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ubuntu-latest]
-                php: ['7.3', '7.4']
+                php: ['7.4']
                 composer-flags: ['--prefer-stable --prefer-lowest', '']
                 symfony: ['~5.1']
         name: PHP ${{ matrix.php }} SF ${{ matrix.symfony }} (${{ matrix.composer-flags }}) on ${{ matrix.os }}
@@ -18,7 +18,7 @@ jobs:
               uses: actions/checkout@v2
 
             - name: Setup PHP
-              uses: shivammathur/setup-php@2.4.2
+              uses: shivammathur/setup-php@2.4.3
               with:
                   php-version: ${{ matrix.php }}
                   coverage: none # disable xdebug, pcov
@@ -33,6 +33,11 @@ jobs:
             - name: Install Composer deps
               run: |
                   composer update ${{ matrix.composer-flags }} --no-interaction --no-suggest
+
+            - name: Remove useless files installed by Flex
+              run: |
+                  rm src/Kernel.php
+                  rm tests/bootstrap.php
 
             - name: Run PHPStan
               run: |
