--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,14 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.4",
+        "ext-json": "*",
+        "nesbot/carbon": "^2.0",
         "serendipity_hq/component-console-styles": "dev-dev",
         "symfony/console": "^5.1",
+        "symfony/form": "^5.1",
         "symfony/property-access": "^5.1",
+        "symfony/string": "^5.1",
         "symfony/validator": "^5.1",
         "thecodingmachine/safe": "^1.0"
     },
