--- a/phpstan.neon
+++ b/phpstan.neon
@@ -18,3 +18,16 @@ parameters:
     excludes_analyse:
         - */src/DependencyInjection/Configuration.php
         - */tests/bootstrap.php
+    ignoreErrors:
+        -
+            message: "#^Parameter \\#1 \\$className of method Doctrine\\\\Persistence\\\\ObjectManager\\:\\:getRepository\\(\\) expects class-string\\<mixed\\>, string given\\.$#"
+            count: 1
+            path: src/Manager/UsersManager.php
+        -
+            message: "#^Unable to resolve the template type T in call to method Doctrine\\\\Persistence\\\\ObjectManager\\:\\:getRepository\\(\\)$#"
+            count: 1
+            path: src/Manager/UsersManager.php
+        -
+            message: "#^Method SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Model\\\\Property\\\\HasPlainPasswordInterface\\:\\:setPassword\\(\\) has no return typehint specified\\.$#"
+            count: 1
+            path: src/Model/Property/HasPlainPasswordInterface.php
