Fix dependency injection.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -27,3 +27,11 @@ parameters:
             message: "#^Unable to resolve the template type T in call to method Doctrine\\\\Persistence\\\\ObjectManager\\:\\:getRepository\\(\\)$#"
             count: 1
             path: src/Manager/UsersManager.php
+        -
+            message: "#^Parameter \\#1 \\$className of method Doctrine\\\\Persistence\\\\ObjectManager\\:\\:getRepository\\(\\) expects class-string\\<mixed\\>, string given\\.$#"
+            count: 2
+            path: src/Manager/PasswordManager.php
+        -
+            message: "#^Unable to resolve the template type T in call to method Doctrine\\\\Persistence\\\\ObjectManager\\:\\:getRepository\\(\\)$#"
+            count: 2
+            path: src/Manager/PasswordManager.php
