--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -4,5 +4,5 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         public: false
-    SerendipityHQ\Bundle\UsersBundle\Command\UsersCreateCommand:
+    SerendipityHQ\Bundle\UsersBundle\Command\CreateUserCommand:
         tags: ['console.command']
