--- a/phpstan.neon
+++ b/phpstan.neon
@@ -35,3 +35,7 @@ parameters:
             message: "#^Unable to resolve the template type T in call to method Doctrine\\\\Persistence\\\\ObjectManager\\:\\:getRepository\\(\\)$#"
             count: 2
             path: src/Manager/PasswordManager.php
+        -
+            message: "#^Strict comparison using === between false and true will always evaluate to false\\.$#"
+            count: 1
+            path: src/Validator/RolesValidator.php
