Add command `shq:user:role:rem`.

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -8,3 +8,5 @@ services:
         tags: ['console.command']
     SerendipityHQ\Bundle\UsersBundle\Command\RoleAddCommand:
         tags: ['console.command']
+    SerendipityHQ\Bundle\UsersBundle\Command\RoleRemCommand:
+        tags: ['console.command']
