--- a/.github/workflows/phan.yml
+++ b/.github/workflows/phan.yml
@@ -27,17 +27,12 @@ jobs:
 
             - name: Fix Symfony version
               run: |
-                  composer req symfony/flex
+                  composer req symfony/flex --no-scripts
                   composer config extra.symfony.require "${{ matrix.symfony }}"
 
             - name: Install Composer deps
               run: |
                   composer update ${{ matrix.composer-flags }} --no-interaction --no-suggest
-
-            - name: Remove useless files installed by Flex
-              run: |
-                  rm src/Kernel.php
-                  rm tests/bootstrap.php
 
             - name: Run Phan
               run: |
