--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,9 @@
         "symfony/stopwatch": "^5.2",
         "symfony/twig-bundle": "^5.2",
         "symfony/var-dumper": "^5.2",
-        "symfony/web-profiler-bundle": "^5.2"
+        "symfony/web-profiler-bundle": "^5.2",
+        "thecodingmachine/phpstan-safe-rule": "1.0.1",
+        "rector/rector": "0.9.9"
     },
     "config": {
         "sort-packages": true
