--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,6 +19,7 @@ updates:
           - "Dependabot"
           - "[Type] Dependencies"
           - "[Lang] PHP"
+          - "[Status] Automerge"
       open-pull-requests-limit: 1000
     - package-ecosystem: "github-actions"
       target-branch: "dev"
@@ -38,6 +39,7 @@ updates:
           - "Dependabot"
           - "[Type] Dependencies"
           - "[Lang] GitHub Actions"
+          - "[Status] Automerge"
       open-pull-requests-limit: 1000
     # PHP CS Fixer through Bamarni
     - package-ecosystem: "composer"
@@ -59,6 +61,7 @@ updates:
           - "Dependabot"
           - "[Type] Dependencies"
           - "[Lang] PHP"
+          - "[Status] Automerge"
       open-pull-requests-limit: 1000
     # PHPUnit through Bamarni
     - package-ecosystem: "composer"
@@ -80,25 +83,5 @@ updates:
           - "Dependabot"
           - "[Type] Dependencies"
           - "[Lang] PHP"
-      open-pull-requests-limit: 1000
-    # PHPStan through Bamarni
-    - package-ecosystem: "composer"
-      versioning-strategy: increase
-      target-branch: "dev"
-      directory: "/vendor-bin/phpstan/"
-      schedule:
-          interval: "daily"
-      allow:
-          - dependency-type: "direct"
-      assignees:
-          - "Aerendir"
-      reviewers:
-          - "Aerendir"
-      commit-message:
-          # Prefix all commit messages with "npm"
-          prefix: "[PHP]"
-      labels:
-          - "Dependabot"
-          - "[Type] Dependencies"
-          - "[Lang] PHP"
+          - "[Status] Automerge"
       open-pull-requests-limit: 1000
