--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -32,14 +32,11 @@ jobs:
 
             - name: Remove Rector
               run: |
-                  composer rem rector/rector thecodingmachine/phpstan-safe-rule --dev
-                  composer rem thecodingmachine/safe
+                  composer rem rector/rector --dev
 
             - name: Install Composer deps
               run: |
-                  composer update ${{ matrix.composer-flags }} --no-interaction --no-suggest --no-scripts
-                  composer bin phpstan update
-                  composer bin phpunit update
+                  composer update ${{ matrix.composer-flags }} --no-interaction --no-scripts
 
             - name: Run PHPStan
               run: |
