--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -31,11 +31,12 @@ jobs:
 
             - name: Remove Rector
               run: |
-                  composer rem rector/rector --dev
+                  composer rem rector/rector --dev --no-scripts
 
             - name: Install Composer deps
               run: |
-                  composer update ${{ matrix.composer-flags }} --no-interaction --no-scripts
+                  composer update ${{ matrix.composer-flags }} --no-interaction --no-suggest --no-scripts
+                  composer bin phpunit update
 
             - name: Run PHPStan
               run: |
