--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -24,11 +24,12 @@ jobs:
 
             - name: Install Composer deps
               run: |
-                  composer update --no-interaction --no-suggest
+                  composer update --no-interaction --no-suggest --no-scripts
+                  composer bin phpunit update
 
             - name: Run PHPunit
               run: |
-                  ./vendor/bin/simple-phpunit
+                  ./vendor/bin/phpunit --coverage-clover var/coverage/clover.xml
 
             - name: Change paths in clover.xml
               run: |
