Fix PHPStan config.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -15,26 +15,10 @@ parameters:
     paths:
         - src
         - tests
-    excludes_analyse:
+    excludePaths:
         - */src/DependencyInjection/Configuration.php
         - */tests/bootstrap.php
     ignoreErrors:
-        -
-            message: "#^Parameter \\#1 \\$className of method Doctrine\\\\Persistence\\\\ObjectManager\\:\\:getRepository\\(\\) expects class-string\\<mixed\\>, string given\\.$#"
-            count: 1
-            path: src/Manager/UsersManager.php
-        -
-            message: "#^Unable to resolve the template type T in call to method Doctrine\\\\Persistence\\\\ObjectManager\\:\\:getRepository\\(\\)$#"
-            count: 1
-            path: src/Manager/UsersManager.php
-        -
-            message: "#^Parameter \\#1 \\$className of method Doctrine\\\\Persistence\\\\ObjectManager\\:\\:getRepository\\(\\) expects class-string\\<mixed\\>, string given\\.$#"
-            count: 1
-            path: src/Manager/PasswordManager.php
-        -
-            message: "#^Unable to resolve the template type T in call to method Doctrine\\\\Persistence\\\\ObjectManager\\:\\:getRepository\\(\\)$#"
-            count: 1
-            path: src/Manager/PasswordManager.php
         -
             message: "#^Strict comparison using === between false and true will always evaluate to false\\.$#"
             count: 1
