--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -9,7 +9,7 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ ubuntu-latest ]
-                php: [ '7.4', '8.0' ]
+                php: [ '7.4', '8.0', 8.1', 8.1' ]
                 symfony: [ '~5.2' ]
 
         steps:
