--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
         "ext-json": "*",
         "doctrine/orm": "^2.7",
         "nesbot/carbon": "^2.0",
-        "symfony/console": "^5.2",
-        "symfony/form": "^5.2",
-        "symfony/property-access": "^5.2",
-        "symfony/string": "^5.2",
-        "symfony/validator": "^5.2",
+        "symfony/console": "~5.4|~6.0",
+        "symfony/form": "~5.4|~6.0",
+        "symfony/property-access": "~5.4|~6.0",
+        "symfony/string": "~5.4|~6.0",
+        "symfony/validator": "~5.4|~6.0",
         "thecodingmachine/safe": "^1.0"
     },
     "require-dev": {
@@ -32,16 +32,16 @@
         "phpstan/phpstan-symfony": "1.0.6",
         "rector/rector": "0.12.12",
         "roave/security-advisories": "dev-master",
-        "symfony/browser-kit": "^5.2",
-        "symfony/css-selector": "^5.2",
-        "symfony/debug-bundle": "^5.2",
+        "symfony/browser-kit": "~5.4|~6.0",
+        "symfony/css-selector": "~5.4|~6.0",
+        "symfony/debug-bundle": "~5.4|~6.0",
         "symfony/monolog-bundle": "^2|^3",
-        "symfony/phpunit-bridge": "^5.2 || ^6.0",
-        "symfony/security-core": "^5.2",
-        "symfony/stopwatch": "^5.2",
-        "symfony/twig-bundle": "^5.2",
-        "symfony/var-dumper": "^5.2",
-        "symfony/web-profiler-bundle": "^5.2",
+        "symfony/phpunit-bridge": "~5.4|~6.0 || ^6.0",
+        "symfony/security-core": "~5.4|~6.0",
+        "symfony/stopwatch": "~5.4|~6.0",
+        "symfony/twig-bundle": "~5.4|~6.0",
+        "symfony/var-dumper": "~5.4|~6.0",
+        "symfony/web-profiler-bundle": "~5.4|~6.0",
         "thecodingmachine/phpstan-safe-rule": "1.1.0"
     },
     "config": {
