--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -38,6 +38,7 @@ jobs:
                 run: |
                     composer req symfony/flex --no-update
                     composer config extra.symfony.require "${{ matrix.symfony }}"
+                    composer config --no-plugins allow-plugins.symfony/flex true
 
             -   name: Remove Rector
                 run: |
@@ -45,9 +46,15 @@ jobs:
 
             -   name: Install Composer deps
                 # Do not install all bin deps, but individually install the required ones
+                # The second update is to make Flex able to do its job
                 run: |
                     composer update --no-interaction --no-scripts
+                    composer update --no-interaction --no-scripts
                     composer bin phpunit update
+
+            -   name: Remove Kernel.php
+                run: |
+                    rm ./src/Kernel.php
 
             -   name: Run PSalm
                 run: |
