--- a/.baseline-phpstan.neon
+++ b/.baseline-phpstan.neon
@@ -11,6 +11,26 @@ parameters:
 			path: src/Form/Type/PasswordResetRequestType.php
 
 		-
+			message: "#^Call to an undefined method SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Model\\\\Property\\\\HasPlainPasswordInterface&Symfony\\\\Component\\\\Security\\\\Core\\\\User\\\\UserInterface\\:\\:getSalt\\(\\)\\.$#"
+			count: 2
+			path: src/Helper/PasswordHelper.php
+
+		-
+			message: "#^Call to method getEncoder\\(\\) on an unknown class Symfony\\\\Component\\\\Security\\\\Core\\\\Encoder\\\\EncoderFactoryInterface\\.$#"
+			count: 1
+			path: src/Helper/PasswordHelper.php
+
+		-
+			message: "#^Parameter \\$encoderFactory of method SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Helper\\\\PasswordHelper\\:\\:__construct\\(\\) has invalid type Symfony\\\\Component\\\\Security\\\\Core\\\\Encoder\\\\EncoderFactoryInterface\\.$#"
+			count: 1
+			path: src/Helper/PasswordHelper.php
+
+		-
+			message: "#^Property SerendipityHQ\\\\Bundle\\\\UsersBundle\\\\Helper\\\\PasswordHelper\\:\\:\\$encoderFactory has unknown class Symfony\\\\Component\\\\Security\\\\Core\\\\Encoder\\\\EncoderFactoryInterface as its type\\.$#"
+			count: 1
+			path: src/Helper/PasswordHelper.php
+
+		-
 			message: "#^Class DateTimeImmutable is unsafe to use\\. Its methods can return FALSE instead of throwing an exception\\. Please add 'use Safe\\\\DateTimeImmutable;' at the beginning of the file to use the variant provided by the 'thecodingmachine/safe' library\\.$#"
 			count: 1
 			path: src/Helper/PasswordResetHelper.php
